@@ -1,3 +1,4 @@
+msgItemCannotReferenceItself = An item should never reference itself. Please correct this for field(s) %1
 msgComicBookMassUpdateHelp = Updates comic books with the information retrieved from the selected Online Service. Either or perfect match on ISBN / barcode or on the title is needed to update the book successfully.
 msgComicBookCharacterMassUpdateHelp = Updates comic book characters with the information retrieved from the selected Online Service.
 msgBoardGameMassUpdateHelp = Updates board games with the information retrieved from the selected Online Service.
